--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Screenshot 2024-05-16 144647.png" class="d-block w-100" alt="...">
+            <img src="./Screenshot 2024-05-16 144647.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="https://myatulya.com/cdn/shop/files/DESKTOP-GIF.gif?v=1715576522&width=1920" class="d-block w-100" alt="...">
